sumo/tests/sumo/pedestrian_model/nonInteracting/errors/disconnected_trip_ignore/errors.sumo
Warning: No connection between 'SC_fwd_connector' and 'CW_bwd_connector' found.
